analysis-tools/output/jalangi-output-2025-03-13T05-16-47.784Z.txt
ERROR:
Command failed: node "/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/src/js/commands/jalangi.js" --inlineIID --inlineSource --analysis "/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/src/js/sample_analyses/ChainedAnalyses.js" --analysis "/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/src/js/sample_analyses/dlint/Utils.js" --analysis "/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/src/js/sample_analyses/dlint/CheckNaN.js" --analysis "/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/src/js/sample_analyses/dlint/ConcatUndefinedToString.js" "src/middleware/admin.js"
/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/src/js/instrument/esnstrument.js:1952
                throw ex;
                ^

SyntaxError: Unexpected token (19:60)
    at pp$4.raise (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2893:15)
    at pp.unexpected (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:697:10)
    at pp.expect (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:691:28)
    at pp$3.parseExprList (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2784:14)
    at pp$3.parseSubscript (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2156:27)
    at pp$3.parseSubscripts (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2136:26)
    at pp$3.parseExprSubscripts (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2123:23)
    at pp$3.parseMaybeUnary (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2097:19)
    at pp$3.parseExprOps (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2032:21)
    at pp$3.parseMaybeConditional (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2015:21) {
  pos: 446,
  loc: Position { line: 19, column: 60 },
  raisedAt: 448
}

Node.js v23.6.0


STDOUT:
Failed to instrument 'use strict';


const nconf = require('nconf');

const user = require('../user');
const meta = require('../meta');
const plugins = require('../plugins');
const privileges = require('../privileges');
const helpers = require('./helpers');

const controllers = {
	admin: require('../controllers/admin'),
	helpers: require('../controllers/helpers'),
};

const middleware = module.exports;

middleware.buildHeader = helpers.try(async (req, res, next) => {
	res.locals.renderAdminHeader = true;
	if (req.method === 'GET') {
		await require('./index').applyCSRFasync(req, res);
	}

	res.locals.config = await controllers.admin.loadConfig(req);
	next();
});

middleware.checkPrivileges = helpers.try(async (req, res, next) => {
	// Kick out guests, obviously
	if (req.uid <= 0) {
		return controllers.helpers.notAllowed(req, res);
	}

	// Otherwise, check for privilege based on page (if not in mapping, deny access)
	const path = req.path.replace(/^(\/api)?(\/v3)?\/admin\/?/g, '');
	if (path) {
		const privilege = privileges.admin.resolve(path);
		if (!await privileges.admin.can(privilege, req.uid)) {
			return controllers.helpers.notAllowed(req, res);
		}
	} else {
		// If accessing /admin, check for any valid admin privs
		const privilegeSet = await privileges.admin.get(req.uid);
		if (!Object.values(privilegeSet).some(Boolean)) {
			return controllers.helpers.notAllowed(req, res);
		}
	}

	// If user does not have password
	const hasPassword = await user.hasPassword(req.uid);
	if (!hasPassword) {
		return next();
	}

	// Reject if they need to re-login (due to ACP timeout), otherwise extend logout timer
	const loginTime = req.session.meta ? req.session.meta.datetime : 0;
	const adminReloginDuration = meta.config.adminReloginDuration * 60000;
	const disabled = meta.config.adminReloginDuration === 0;
	if (disabled || (loginTime && parseInt(loginTime, 10) > Date.now() - adminReloginDuration)) {
		const timeLeft = parseInt(loginTime, 10) - (Date.now() - adminReloginDuration);
		if (req.session.meta && timeLeft < Math.min(60000, adminReloginDuration)) {
			req.session.meta.datetime += Math.min(60000, adminReloginDuration);
		}

		return next();
	}

	let returnTo = req.path;
	if (nconf.get('relative_path')) {
		returnTo = req.path.replace(new RegExp(`^${nconf.get('relative_path')}`), '');
	}
	returnTo = returnTo.replace(/^\/api/, '');

	req.session.returnTo = returnTo;
	req.session.forceLogin = 1;

	await plugins.hooks.fire('response:auth.relogin', { req, res });
	if (res.headersSent) {
		return;
	}

	if (res.locals.isAPI) {
		controllers.helpers.formatApiResponse(401, res);
	} else {
		res.redirect(`${nconf.get('relative_path')}/login?local=1`);
	}
});



STDERR:
/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/src/js/instrument/esnstrument.js:1952
                throw ex;
                ^

SyntaxError: Unexpected token (19:60)
    at pp$4.raise (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2893:15)
    at pp.unexpected (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:697:10)
    at pp.expect (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:691:28)
    at pp$3.parseExprList (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2784:14)
    at pp$3.parseSubscript (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2156:27)
    at pp$3.parseSubscripts (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2136:26)
    at pp$3.parseExprSubscripts (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2123:23)
    at pp$3.parseMaybeUnary (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2097:19)
    at pp$3.parseExprOps (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2032:21)
    at pp$3.parseMaybeConditional (/Users/xiebo/Desktop/17313/nodebb-s25-information-swimmers-2/analysis-tools/jalangi2/node_modules/acorn/dist/acorn.js:2015:21) {
  pos: 446,
  loc: Position { line: 19, column: 60 },
  raisedAt: 448
}

Node.js v23.6.0
